feat: Add filters for portfolio projects
* Filter by type: application, library, workshop, video tutorial
* Filter by language: PHP, Java, JS, Docker

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -146,6 +146,10 @@ a, a:hover {
     border-color: #00a79d;
 }
 
+.filters {
+    margin-bottom: 3em;
+}
+
 .panel-php > .panel-footer,
 .panel-php > .panel-heading {
     background-color: #8892BF;
