--- a/source/portfolio.html.twig
+++ b/source/portfolio.html.twig
@@ -10,8 +10,24 @@ use:
         Portafolio
     </h1>
 </header>
-<section class="portfolio">
-    <div class="col-sm-3">
+<div class="row hidden-xs">
+    <div class="text-center filters">
+        <div class="btn-group" role="group">
+            <button type="button" data-filter="*" class="btn btn-primary active">Todo</button>
+            <button type="button" data-filter="application" class="btn btn-primary">Aplicaciones</button>
+            <button type="button" data-filter="library" class="btn btn-primary">Librerías</button>
+            <button type="button" data-filter="workshop" class="btn btn-primary">Talleres</button>
+            <button type="button" data-filter="tutorial" class="btn btn-primary">Video tutoriales</button>
+            <button type="button" data-filter="java" class="btn btn-primary">Java</button>
+            <button type="button" data-filter="php" class="btn btn-primary">PHP</button>
+            <button type="button" data-filter="javascript" class="btn btn-primary">Javascript</button>
+            <button type="button" data-filter="docker" class="btn btn-primary">Docker</button>
+        </div>
+    </div>
+</div>
+<section class="portfolio grid row">
+    {# applications #}
+    <div class="col-sm-3 grid-item application java">
         <div class="panel panel-java">
             <div class="panel-heading">
                 <i class="devicon-java-plain"></i>
@@ -56,7 +72,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 grid-item application java">
         <div class="panel panel-java">
             <div class="panel-heading">
                 <i class="devicon-java-plain"></i>
@@ -100,7 +116,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 grid-item application java">
         <div class="panel panel-java">
             <div class="panel-heading">
                 <i class="devicon-java-plain"></i>
@@ -144,7 +160,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 grid-item application javascript">
         <div class="panel panel-javascript">
             <div class="panel-heading">
                 <i class="devicon-javascript-plain"></i>
@@ -188,7 +204,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 grid-item application php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-php-plain"></i>
@@ -232,7 +248,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 grid-item application php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-laravel-plain"></i>
@@ -276,7 +292,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 grid-item application php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-zend-plain"></i>
@@ -298,7 +314,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 grid-item application php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-zend-plain"></i>
@@ -320,7 +336,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 grid-item application php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-laravel-plain"></i>
@@ -343,7 +359,7 @@ use:
         </div>
     </div>
     {# libraries #}
-    <div class="col-sm-3">
+    <div class="col-sm-3 grid-item library php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-php-plain"></i>
@@ -390,7 +406,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 grid-item library php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-doctrine-plain"></i>
@@ -436,7 +452,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 grid-item library php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-php-plain"></i>
@@ -482,7 +498,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 grid-item library docker">
         <div class="panel panel-docker">
             <div class="panel-heading">
                 <i class="devicon-docker-plain"></i>
@@ -507,7 +523,7 @@ use:
         </div>
     </div>
     {# workshops #}
-    <div class="col-sm-3">
+    <div class="col-sm-3 grid-item workshop php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-php-plain"></i>
@@ -529,7 +545,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 grid-item workshop php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-symfony-original"></i>
@@ -552,7 +568,7 @@ use:
         </div>
     </div>
     {# tutorials #}
-    <div class="col-sm-3">
+    <div class="col-sm-3 grid-item tutorial php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-php-plain"></i>
@@ -576,7 +592,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 grid-item tutorial php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-php-plain"></i>
@@ -600,7 +616,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 grid-item tutorial php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-php-plain"></i>
