fix: Make the portfolio page responsive
* Change layout for small and medium size screens

--- a/source/portfolio.html.twig
+++ b/source/portfolio.html.twig
@@ -27,7 +27,7 @@ use:
 </div>
 <section class="portfolio grid row">
     {# applications #}
-    <div class="col-sm-3 grid-item application java">
+    <div class="col-sm-4 col-md-3 grid-item application java">
         <div class="panel panel-java">
             <div class="panel-heading">
                 <i class="devicon-java-plain"></i>
@@ -72,7 +72,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3 grid-item application java">
+    <div class="col-sm-4 col-md-3 grid-item application java">
         <div class="panel panel-java">
             <div class="panel-heading">
                 <i class="devicon-java-plain"></i>
@@ -116,7 +116,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3 grid-item application java">
+    <div class="col-sm-4 col-md-3 grid-item application java">
         <div class="panel panel-java">
             <div class="panel-heading">
                 <i class="devicon-java-plain"></i>
@@ -160,7 +160,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3 grid-item application javascript">
+    <div class="col-sm-4 col-md-3 grid-item application javascript">
         <div class="panel panel-javascript">
             <div class="panel-heading">
                 <i class="devicon-javascript-plain"></i>
@@ -204,7 +204,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3 grid-item application php">
+    <div class="col-sm-4 col-md-3 grid-item application php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-php-plain"></i>
@@ -248,7 +248,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3 grid-item application php">
+    <div class="col-sm-4 col-md-3 grid-item application php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-laravel-plain"></i>
@@ -292,7 +292,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3 grid-item application php">
+    <div class="col-sm-4 col-md-3 grid-item application php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-zend-plain"></i>
@@ -314,7 +314,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3 grid-item application php">
+    <div class="col-sm-4 col-md-3 grid-item application php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-zend-plain"></i>
@@ -336,7 +336,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3 grid-item application php">
+    <div class="col-sm-4 col-md-3 grid-item application php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-laravel-plain"></i>
@@ -359,7 +359,7 @@ use:
         </div>
     </div>
     {# libraries #}
-    <div class="col-sm-3 grid-item library php">
+    <div class="col-sm-4 col-md-3 grid-item library php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-php-plain"></i>
@@ -406,7 +406,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3 grid-item library php">
+    <div class="col-sm-4 col-md-3 grid-item library php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-doctrine-plain"></i>
@@ -452,7 +452,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3 grid-item library php">
+    <div class="col-sm-4 col-md-3 grid-item library php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-php-plain"></i>
@@ -498,7 +498,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3 grid-item library docker">
+    <div class="col-sm-4 col-md-3 grid-item library docker">
         <div class="panel panel-docker">
             <div class="panel-heading">
                 <i class="devicon-docker-plain"></i>
@@ -523,7 +523,7 @@ use:
         </div>
     </div>
     {# workshops #}
-    <div class="col-sm-3 grid-item workshop php">
+    <div class="col-sm-4 col-md-3 grid-item workshop php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-php-plain"></i>
@@ -545,7 +545,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3 grid-item workshop php">
+    <div class="col-sm-4 col-md-3 grid-item workshop php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-symfony-original"></i>
@@ -568,7 +568,7 @@ use:
         </div>
     </div>
     {# tutorials #}
-    <div class="col-sm-3 grid-item tutorial php">
+    <div class="col-sm-4 col-md-3 grid-item tutorial php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-php-plain"></i>
@@ -592,7 +592,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3 grid-item tutorial php">
+    <div class="col-sm-4 col-md-3 grid-item tutorial php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-php-plain"></i>
@@ -616,7 +616,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-3 grid-item tutorial php">
+    <div class="col-sm-4 col-md-3 grid-item tutorial php">
         <div class="panel panel-php">
             <div class="panel-heading">
                 <i class="devicon-php-plain"></i>
