--- a/source/_views/portfolio.html.twig
+++ b/source/_views/portfolio.html.twig
@@ -26,19 +26,6 @@
     <script
         src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"
     ></script>
-    <script>
-        var $button = $("button");
-        var $grid = $(".grid").isotope({
-            itemSelector: ".grid-item",
-            layoutMode: "fitRows"
-        });
-        $button.on('click', function () {
-            $button.removeClass("active");
-            var cssClass = $(this).data("filter");
-            var filter = cssClass !== "*" ? "." + cssClass : cssClass;
-            $grid.isotope({ filter: filter });
-            $(this).addClass("active");
-        });
-    </script>
+    <script src="/js/filters.js"></script>
     </body>
 </html>
