--- a/source/en/portfolio.html.twig
+++ b/source/en/portfolio.html.twig
@@ -634,4 +634,82 @@ use:
             </div>
         </div>
     </div>
+    <div class="col-sm-6 col-md-4 col-lg-3 grid-item library java">
+        <div class="panel panel-java">
+            <div class="panel-heading">
+                <i class="devicon-java-plain"></i>
+                Yelp Fusion Java Client
+            </div>
+            <div class="panel-body">
+                Java client for Yelp Fusion API. It currently supports the search, reviews and
+                business endpoints
+            </div>
+            <div class="panel-footer">
+                <a
+                        href="https://github.com/MontealegreLuis/yelpv3-java-client"
+                        target="_blank"
+                        rel="noopener"
+                        class="github"
+                >
+                    <i class="devicon-github-plain"></i>
+                </a>
+                <a
+                    href="https://travis-ci.org/MontealegreLuis/yelpv3-java-client"
+                    target="_blank"
+                    rel="noopener"
+                    class="code-badge"
+                >
+                    <img
+                        src="https://travis-ci.org/MontealegreLuis/yelpv3-java-client.svg?branch=master"
+                        alt="Build Status"
+                    >
+                </a>
+                <a
+                    href="https://codebeat.co/projects/github-com-montealegreluis-yelpv3-java-client-master"
+                    target="_blank"
+                    rel="noopener"
+                    class="code-badge"
+                >
+                    <img
+                        src="https://codebeat.co/badges/6af99e8b-adb4-4f26-9fa8-e586aa7986e6"
+                        alt="Codebeat badge"
+                    >
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-4 col-lg-3 grid-item library java">
+        <div class="panel panel-java">
+            <div class="panel-heading">
+                <i class="devicon-java-plain"></i>
+                Yelp API in Spring Boot
+            </div>
+            <div class="panel-body">
+                Web application written in Spring boot. Users can search by location and category
+                using the Yelp Fusion API. It shows how to use the search, reviews and business
+                endpoints.
+            </div>
+            <div class="panel-footer">
+                <a
+                    href="https://github.com/MontealegreLuis/yelp-demo"
+                    target="_blank"
+                    rel="noopener"
+                    class="github"
+                >
+                    <i class="devicon-github-plain"></i>
+                </a>
+                <a
+                    href="https://codebeat.co/projects/github-com-montealegreluis-yelp-demo-master"
+                    target="_blank"
+                    rel="noopener"
+                    class="code-badge"
+                >
+                    <img
+                        src="https://codebeat.co/badges/0704b6a2-cd9a-446b-bc67-4db792c641a0"
+                        alt="Codebeat"
+                    >
+                </a>
+            </div>
+        </div>
+    </div>
 </section>
