--- a/source/en/portfolio.html.twig
+++ b/source/en/portfolio.html.twig
@@ -21,6 +21,7 @@ use:
             <button type="button" data-filter="java" class="btn btn-primary">Java</button>
             <button type="button" data-filter="php" class="btn btn-primary">PHP</button>
             <button type="button" data-filter="javascript" class="btn btn-primary">Javascript</button>
+            <button type="button" data-filter="ruby" class="btn btn-primary">Ruby</button>
             <button type="button" data-filter="docker" class="btn btn-primary">Docker</button>
         </div>
     </div>
@@ -78,8 +79,8 @@ use:
                 Catalog using ZF1 & ZF2
             </div>
             <div class="panel-body">
-                Products catalago written in ZF1. It integrates more modern components, like ZF2
-                service manage, phpspec and Twig.
+                Catalog of products written in ZF1. It integrates more modern components, like ZF2
+                service manager, phpspec and Twig.
             </div>
             <div class="panel-footer">
                 <a
@@ -89,6 +90,50 @@ use:
                         class="bitbucket"
                 >
                     <i class="devicon-bitbucket-plain"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-4 col-lg-3 grid-item application ruby">
+        <div class="panel panel-ruby">
+            <div class="panel-heading">
+                <i class="devicon-ruby-plain"></i>
+                Contacts book in Ruby
+            </div>
+            <div class="panel-body">
+                Command line application to manage a person's contacts. It demonstrates how to write
+                integration tests using rspec and SQLite
+            </div>
+            <div class="panel-footer">
+                <a
+                    href="https://github.com/MontealegreLuis/contacts-manager"
+                    target="_blank"
+                    rel="noopener"
+                    class="github"
+                >
+                    <i class="devicon-github-plain"></i>
+                </a>
+                <a
+                    href="https://travis-ci.org/MontealegreLuis/contacts-manager"
+                    target="_blank"
+                    rel="noopener"
+                    class="code-badge"
+                >
+                    <img
+                        src="https://travis-ci.org/MontealegreLuis/contacts-manager.svg?branch=master"
+                        alt="Build Status"
+                    >
+                </a>
+                <a
+                    href="https://codeclimate.com/github/MontealegreLuis/contacts-manager"
+                    target="_blank"
+                    rel="noopener"
+                    class="code-badge"
+                >
+                    <img
+                        src="https://codeclimate.com/github/MontealegreLuis/contacts-manager/badges/gpa.svg"
+                        alt="Code Climate"
+                    >
                 </a>
             </div>
         </div>
@@ -137,6 +182,51 @@ use:
             </div>
         </div>
     </div>
+    <div class="col-sm-6 col-md-4 col-lg-3 grid-item application ruby">
+        <div class="panel panel-ruby">
+            <div class="panel-heading">
+                <i class="devicon-ruby-plain"></i>
+                Chatbot in Ruby
+            </div>
+            <div class="panel-body">
+                Command line application with a very minimalistic Chatbot. It demonstrates strings
+                manipulation in Ruby and how to use rspec to unit test.
+            </div>
+            <div class="panel-footer">
+                <a
+                    href="https://github.com/MontealegreLuis/chat-bot"
+                    target="_blank"
+                    rel="noopener"
+                    class="github"
+                >
+                    <i class="devicon-github-plain"></i>
+                </a>
+                <a
+                    href="https://travis-ci.org/MontealegreLuis/chat-bot"
+                    target="_blank"
+                    rel="noopener"
+                    class="code-badge"
+                >
+                    <img
+                        src="https://travis-ci.org/MontealegreLuis/chat-bot.svg?branch=master"
+                        alt="Build Status"
+                    >
+                </a>
+                <a
+                    href="https://codeclimate.com/github/MontealegreLuis/chat-bot"
+                    target="_blank"
+                    rel="noopener"
+                    class="code-badge"
+                >
+                    <img
+                        src="https://codeclimate.com/github/MontealegreLuis/chat-bot/badges/gpa.svg"
+                        alt="Code Climate"
+                    >
+                </a>
+            </div>
+        </div>
+    </div>
+
     <div class="col-sm-6 col-md-4 col-lg-3 grid-item library php">
         <div class="panel panel-php">
             <div class="panel-heading">
@@ -678,7 +768,7 @@ use:
             </div>
         </div>
     </div>
-    <div class="col-sm-6 col-md-4 col-lg-3 grid-item library java">
+    <div class="col-sm-6 col-md-4 col-lg-3 grid-item application java">
         <div class="panel panel-java">
             <div class="panel-heading">
                 <i class="devicon-java-plain"></i>
