feature: Add Scott Hanselman talk Scaling yourself

--- a/source/talks.html.twig
+++ b/source/talks.html.twig
@@ -113,6 +113,29 @@ title: Talks
         <div class="panel">
             <div class="media">
                 <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=8bZh5LMaSmE">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/8bZh5LMaSmE/3.jpg"
+                            alt="All the Little Things"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        All the Little Things <small>Sandi Metz</small>
+                    </h4>
+                    <p>
+                        Want better apps? Make smaller things... yeah that's it.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
                     <a href="https://vimeo.com/79106557">
                         <img
                             class="media-object"
@@ -138,20 +161,21 @@ title: Talks
         <div class="panel">
             <div class="media">
                 <div class="media-left">
-                    <a href="https://www.youtube.com/watch?v=8bZh5LMaSmE">
+                    <a href="https://www.youtube.com/watch?v=FS1mnISoG7U">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/8bZh5LMaSmE/3.jpg"
-                            alt="All the Little Things"
+                            src="http://i3.ytimg.com/vi/FS1mnISoG7U/2.jpg"
+                            alt="Scaling Yourself"
                         >
                     </a>
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading">
-                        All the Little Things <small>Sandi Metz</small>
+                        Scaling Yourself <small>Scott Hanselman</small>
                     </h4>
                     <p>
-                        Want better apps? Make smaller things... yeah that's it.
+                        If it's not improving my life in some way, it's mental clutter and it's out.
+                        Excellent advice on how to end the day without guilt.
                     </p>
                 </div>
             </div>
