feature: Add Kathy Sierra talk Making Badass Developers

--- a/source/talks.html.twig
+++ b/source/talks.html.twig
@@ -181,4 +181,28 @@ title: Talks
             </div>
         </div>
     </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=FKTxC9pl-WM">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/FKTxC9pl-WM/2.jpg"
+                            alt="Making Badass Developers"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Making Badass Developers <small>Kathy Sierra</small>
+                    </h4>
+                    <p>
+                        Half-a-skill beats a half-assed skill. Practice does not make perfect.
+                        Practice makes <strong>permanent</strong>.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
