feature: Add Model-minded development talk

--- a/source/talks.html.twig
+++ b/source/talks.html.twig
@@ -161,6 +161,30 @@ title: Talks
         <div class="panel">
             <div class="media">
                 <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=FKTxC9pl-WM">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/FKTxC9pl-WM/2.jpg"
+                            alt="Making Badass Developers"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Making Badass Developers <small>Kathy Sierra</small>
+                    </h4>
+                    <p>
+                        Half-a-skill beats a half-assed skill. Practice does not make perfect.
+                        Practice makes <strong>permanent</strong>.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
                     <a href="https://www.youtube.com/watch?v=FS1mnISoG7U">
                         <img
                             class="media-object"
@@ -185,21 +209,20 @@ title: Talks
         <div class="panel">
             <div class="media">
                 <div class="media-left">
-                    <a href="https://www.youtube.com/watch?v=FKTxC9pl-WM">
+                    <a href="https://www.youtube.com/watch?v=gAQ6t3F_2Ug">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/FKTxC9pl-WM/2.jpg"
-                            alt="Making Badass Developers"
+                            src="http://i3.ytimg.com/vi/gAQ6t3F_2Ug/2.jpg"
+                            alt="Model-Minded Development"
                         >
                     </a>
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading">
-                        Making Badass Developers <small>Kathy Sierra</small>
+                        Model-Minded Development <small>George Fairbanks</small>
                     </h4>
                     <p>
-                        Half-a-skill beats a half-assed skill. Practice does not make perfect.
-                        Practice makes <strong>permanent</strong>.
+                        Programming is theory building. Programming is distributed cognition.
                     </p>
                 </div>
             </div>
