feature: Add Elisabeth Hendrickson talk

--- a/source/talks.html.twig
+++ b/source/talks.html.twig
@@ -256,31 +256,6 @@ title: Talks
         <div class="panel">
             <div class="media">
                 <div class="media-left">
-                    <a href="https://www.youtube.com/watch?v=HQXVKHoUQxY">
-                        <img
-                            class="media-object"
-                            src="http://i3.ytimg.com/vi/HQXVKHoUQxY/1.jpg"
-                            alt="Connascence Examined"
-                        >
-                    </a>
-                </div>
-                <div class="media-body">
-                    <h4 class="media-heading">
-                        Connascence Examined <small>Jim Weirich</small>
-                    </h4>
-                    <p>
-                        Connascence in software are those things that need to change together.
-                        Connascence is important because <strong>change is expensive</strong>.
-                        Connascence is a very particular and interesting way to understand coupling.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-6">
-        <div class="panel">
-            <div class="media">
-                <div class="media-left">
                     <a href="https://vimeo.com/108441214">
                         <img
                             class="media-object"
@@ -295,7 +270,58 @@ title: Talks
                     </h4>
                     <p>
                         Never write big programs. Your code should be easy to delete. Optimize for
-                        your ability to rewrite yor system in one week.
+                        your <strong>ability to rewrite yor system</strong>.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=HQXVKHoUQxY">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/HQXVKHoUQxY/1.jpg"
+                            alt="Connascence Examined"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Connascence Examined <small>Jim Weirich</small>
+                    </h4>
+                    <p>
+                        Connascence in software are those things that need to change together.
+                        It is important because <strong>change is expensive</strong>.
+                        Connascence is a very particular way to understand coupling.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=iu5WB-NvHFc">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/iu5WB-NvHFc/2.jpg"
+                            alt="Testing Lessons from Extreme Programmers"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Testing Lessons from Extreme Programmers
+                        <small> Elisabeth Hendrickson</small>
+                    </h4>
+                    <p>
+                        Effective testing involves a whole team effort.
+                        This talk also introduced me to the concept of <strong>exploratory testing
+                        </strong>.
                     </p>
                 </div>
             </div>
