feature: Add "Event storming" and "Workflows of refactoring" talks

--- a/source/talks.html.twig
+++ b/source/talks.html.twig
@@ -295,7 +295,32 @@ title: Talks
                     <p>
                         Connascence in software are those things that need to change together.
                         It is important because <strong>change is expensive</strong>.
-                        Connascence is a very particular way to understand coupling.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=veTVAN0oEkQ">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/veTVAN0oEkQ/3.jpg"
+                            alt="Event Storming"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Event Storming
+                        <small>Alberto Brandolini</small>
+                    </h4>
+                    <p>
+                        DDD is for rewriting software frequently. Event storming is an act of
+                        deliberate collective learning. Value is in the <strong>interaction between
+                        people</strong>
                     </p>
                 </div>
             </div>
@@ -322,6 +347,32 @@ title: Talks
                         Effective testing involves a whole team effort.
                         This talk also introduced me to the concept of <strong>exploratory testing
                         </strong>.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=vqEg37e4Mkw">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/vqEg37e4Mkw/2.jpg"
+                            alt="Workflows of refactoring"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Workflows of refactoring
+                        <small>Martin Fowler</small>
+                    </h4>
+                    <p>
+                        The only reason to refactor is to <strong>deliver more functionality more
+                        quickly</strong>. The types are: TDD, litter pickup, comprehension,
+                        preparatory and long term refactoring
                     </p>
                 </div>
             </div>
