feature: Add Katrina Owen and Rafael Dohms talks

--- a/source/talks.html.twig
+++ b/source/talks.html.twig
@@ -480,4 +480,54 @@ title: Talks
             </div>
         </div>
     </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=GWEEPt8VvmU">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/GWEEPt8VvmU/2.jpg"
+                            alt="Overkill"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Overkill
+                        <small>Katrina Owen</small>
+                    </h4>
+                    <p>
+                        Mastery is hard. <strong>Practice simple things intensely</strong>.
+                        Challenge yourself
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=GtB5DAfOWMQ">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/GtB5DAfOWMQ/2.jpg"
+                            alt="Your code sucks, let's fix it"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Your code sucks, let's fix it
+                        <small>Rafael Dohms</small>
+                    </h4>
+                    <p>
+                        A variety of simple often rhythmical, exercises to achieve better OO design
+                        and code quality
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
