feature: Add Mathias Verraes talk on models

--- a/source/talks.html.twig
+++ b/source/talks.html.twig
@@ -523,8 +523,33 @@ title: Talks
                         <small>Rafael Dohms</small>
                     </h4>
                     <p>
-                        A variety of simple often rhythmical, exercises to achieve better OO design
-                        and code quality
+                        <strong>Object calisthenics</strong>: A variety of simple, exercises to
+                        achieve better OO design and code quality
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=ZJ63ltuwMaE">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/ZJ63ltuwMaE/1.jpg"
+                            alt="Unbreakable Domain Models"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Unbreakable Domain Models
+                        <small>Mathias Verraes</small>
+                    </h4>
+                    <p>
+                        Use objects as a <strong>consistency boundary</strong>. Make the implicit
+                        explicit. Protect your invariants
                     </p>
                 </div>
             </div>
